// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`F0Counter Snapshot - all type variants at md size 1`] = `
<View
  className="flex items-center justify-center rounded-xs grow-0 overflow-hidden min-w-5 p-0.5 bg-f0-background-secondary border border-f0-border-secondary"
>
  <Text
    className="tabular-nums no-underline normal-case tracking-normal text-[12px] leading-[16px] font-medium text-f0-foreground text-center"
    ellipsizeMode="tail"
    numberOfLines={1}
  >
    5
  </Text>
</View>
`;

exports[`F0Counter Snapshot - all type variants at md size 2`] = `
<View
  className="flex items-center justify-center rounded-xs grow-0 overflow-hidden min-w-5 p-0.5 border border-f0-border-inverse"
>
  <Text
    className="tabular-nums no-underline normal-case tracking-normal text-[12px] leading-[16px] font-medium text-f0-foreground-inverse text-center"
    ellipsizeMode="tail"
    numberOfLines={1}
  >
    5
  </Text>
</View>
`;

exports[`F0Counter Snapshot - all type variants at md size 3`] = `
<View
  className="flex items-center justify-center rounded-xs grow-0 overflow-hidden min-w-5 p-0.5 bg-f0-background-selected-bold"
>
  <Text
    className="tabular-nums no-underline normal-case tracking-normal text-[12px] leading-[16px] font-medium text-f0-foreground-inverse text-center"
    ellipsizeMode="tail"
    numberOfLines={1}
  >
    5
  </Text>
</View>
`;

exports[`F0Counter Snapshot - all type variants at md size 4`] = `
<View
  className="flex items-center justify-center rounded-xs grow-0 overflow-hidden min-w-5 p-0.5 bg-f0-background-accent-bold"
>
  <Text
    className="tabular-nums no-underline normal-case tracking-normal text-[12px] leading-[16px] font-medium text-f0-foreground-inverse text-center"
    ellipsizeMode="tail"
    numberOfLines={1}
  >
    5
  </Text>
</View>
`;

exports[`F0Counter Snapshot - all type variants at sm size 1`] = `
<View
  className="flex items-center justify-center rounded-xs grow-0 overflow-hidden min-w-4 px-0.5 bg-f0-background-secondary border border-f0-border-secondary"
>
  <Text
    className="tabular-nums no-underline normal-case tracking-normal text-[12px] leading-[16px] font-medium text-f0-foreground text-center"
    ellipsizeMode="tail"
    numberOfLines={1}
  >
    5
  </Text>
</View>
`;

exports[`F0Counter Snapshot - all type variants at sm size 2`] = `
<View
  className="flex items-center justify-center rounded-xs grow-0 overflow-hidden min-w-4 px-0.5 border border-f0-border-inverse"
>
  <Text
    className="tabular-nums no-underline normal-case tracking-normal text-[12px] leading-[16px] font-medium text-f0-foreground-inverse text-center"
    ellipsizeMode="tail"
    numberOfLines={1}
  >
    5
  </Text>
</View>
`;

exports[`F0Counter Snapshot - all type variants at sm size 3`] = `
<View
  className="flex items-center justify-center rounded-xs grow-0 overflow-hidden min-w-4 px-0.5 bg-f0-background-selected-bold"
>
  <Text
    className="tabular-nums no-underline normal-case tracking-normal text-[12px] leading-[16px] font-medium text-f0-foreground-inverse text-center"
    ellipsizeMode="tail"
    numberOfLines={1}
  >
    5
  </Text>
</View>
`;

exports[`F0Counter Snapshot - all type variants at sm size 4`] = `
<View
  className="flex items-center justify-center rounded-xs grow-0 overflow-hidden min-w-4 px-0.5 bg-f0-background-accent-bold"
>
  <Text
    className="tabular-nums no-underline normal-case tracking-normal text-[12px] leading-[16px] font-medium text-f0-foreground-inverse text-center"
    ellipsizeMode="tail"
    numberOfLines={1}
  >
    5
  </Text>
</View>
`;

exports[`F0Counter Snapshot - maxValue overflow 1`] = `
<View
  className="flex items-center justify-center rounded-xs grow-0 overflow-hidden min-w-5 p-0.5 bg-f0-background-accent-bold"
>
  <Text
    className="tabular-nums no-underline normal-case tracking-normal text-[12px] leading-[16px] font-medium text-f0-foreground-inverse text-center"
    ellipsizeMode="tail"
    numberOfLines={1}
  >
    +99
  </Text>
</View>
`;
